test/tests/bad/undef-type_1.carth
;; UndefType

(extern foo (Fun Int Foo))
